--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -11,13 +11,13 @@ WORKDIR /opt
 RUN git clone https://github.com/pulsarIO/jetstream.git
 WORKDIR /opt/jetstream
 RUN git checkout jetstream-root-4.0.1
-WORKDIR /opt/jetstream/configurationmanagement
+WORKDIR /opt/jetstream
 RUN mvn -DskipTests clean install
 
 ENV project_version 4.0.1
 ENV project_name configuration
 
-RUN cp target/${project_name}-${project_version}-bin.tar.gz /opt/app/${project_name}-${project_version}-bin.tar.gz
+RUN cp configurationmanagement/target/${project_name}-${project_version}-bin.tar.gz /opt/app/${project_name}-${project_version}-bin.tar.gz
 WORKDIR /opt/app
 RUN tar -zxvf ${project_name}-${project_version}-bin.tar.gz
 RUN ln -s /opt/app/${project_name}-${project_version} jetstreamapp
