Fix docker files

--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -7,21 +7,13 @@ RUN echo "LANG=C.UTF-8" > /etc/default/locale
 
 # Build
 RUN mkdir -p /opt/app
-WORKDIR /opt
-RUN git clone https://github.com/pulsarIO/jetstream.git
-WORKDIR /opt/jetstream
-RUN git checkout jetstream-root-4.0.1
-WORKDIR /opt/jetstream
-RUN mvn -DskipTests clean install
-
-WORKDIR /opt/jetstream/configurationmanagement
-RUN mvn -DskipTests install
+WORKDIR /opt/app
 
 ENV project_version 4.0.1
 ENV project_name configuration
 
-RUN cp target/${project_name}-${project_version}-bin.tar.gz /opt/app/${project_name}-${project_version}-bin.tar.gz
-WORKDIR /opt/app
+RUN wget http://repo1.maven.org/maven2/com/ebay/jetstream/${project_name}/4.0.1/${project_name}-${project_version}-bin.tar.gz 
+
 RUN tar -zxvf ${project_name}-${project_version}-bin.tar.gz
 RUN ln -s /opt/app/${project_name}-${project_version} jetstreamapp
 WORKDIR /opt/app/jetstreamapp
