--- a/collector/Dockerfile
+++ b/collector/Dockerfile
@@ -38,5 +38,10 @@ ENV JETSTREAM_ZKSERVER_PORT 2181
 ENV JETSTREAM_MONGOURL mongo://mongoserver:27017/config
 ENV PULSAR_KAFKA_BROKERS kafkaserver:9092
 
-EXPOSE 8080 9999 15590
+# One Http port, Two Context ports
+ENV JETSTREAM_REST_BASEPORT 8080
+ENV JETSTREAM_CONTEXT_BASEPORT 15590
+ENV JETSTREAM_APP_PORT 9999
+
+EXPOSE 8080 9999 15590 15591
 ENTRYPOINT ./start.sh
