--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -9,18 +9,10 @@ RUN echo "LANG=C.UTF-8" > /etc/default/locale
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
 
-WORKDIR /opt
-RUN git clone https://github.com/pulsarIO/jetstream.git
-WORKDIR /opt/jetstream/
-RUN git checkout jetstream-root-4.0.2
-WORKDIR /opt/jetstream/configurationmanagement
-RUN mvn -Djettyserver.version=9.2.2.v20140723 -DskipTests clean install
-
-ENV project_version 4.0.2
+ENV project_version 4.1.0
 ENV project_name configuration
 
-RUN cp target/${project_name}-${project_version}-bin.tar.gz /opt/app/${project_name}-${project_version}-bin.tar.gz
-WORKDIR /opt/app
+RUN wget http://repo1.maven.org/maven2/com/ebay/jetstream/${project_name}/${project_version}/${project_name}-${project_version}-bin.tar.gz
 
 RUN tar -zxvf ${project_name}-${project_version}-bin.tar.gz
 RUN ln -s /opt/app/${project_name}-${project_version} jetstreamapp
@@ -35,6 +27,10 @@ ENV JETSTREAM_CONFIG_VERSION 1.0
 ENV JETSTREAM_ZKSERVER_HOST zkserver
 ENV JETSTREAM_ZKSERVER_PORT 2181
 ENV JETSTREAM_MONGOURL mongo://mongoserver:27017/config
+
+# One http port, no contenxt port
+ENV JETSTREAM_REST_BASEPORT 8080
+ENV JETSTREAM_APP_PORT 9999
 
 EXPOSE 9999 8080
 ENTRYPOINT ./start.sh
