--- a/metriccalculator/Dockerfile
+++ b/metriccalculator/Dockerfile
@@ -35,5 +35,9 @@ ENV JETSTREAM_MONGOURL mongo://mongoserver:27017/config
 ENV PULSAR_KAFKA_BROKERS kafkaserver:9092
 ENV PULSAR_CASSANDRA cassandraserver
 
-EXPOSE 9999 15599 15600 15601
+# Three context ports
+ENV JETSTREAM_CONTEXT_BASEPORT 15590
+ENV JETSTREAM_APP_PORT 9999
+
+EXPOSE 9999 15590 15591 15592
 ENTRYPOINT ./start.sh
