--- a/replay/Dockerfile
+++ b/replay/Dockerfile
@@ -35,6 +35,10 @@ ENV JETSTREAM_MONGOURL mongo://mongoserver:27017/config
 ENV PULSAR_KAFKA_ZK kafkaserver:2181
 ENV PULSAR_KAFKA_BROKERS kafkaserver:9092
 
-EXPOSE 9999 
+# Three Context ports, actually not used
+ENV JETSTREAM_CONTEXT_BASEPORT 15590
+ENV JETSTREAM_APP_PORT 9999
+
+EXPOSE 9999 15590 15591 15592
 ENTRYPOINT ./start.sh
 
